--- a/tests/integration/validation_notebook.ipynb
+++ b/tests/integration/validation_notebook.ipynb
@@ -43,19 +43,25 @@
    "outputs": [],
    "source": [
     "from pyspark.testing.utils import assertDataFrameEqual\n",
+    "from flights.transforms.flight_transforms import get_flight_schema\n",
+    "\n",
     "\n",
     "result_counts = spark.sql(\"\"\"\n",
     "        SELECT count(distinct deptime) deptime_count, count(1) rows\n",
     "        FROM main.flights_test.flights_raw\n",
     "        \"\"\")\n",
     "\n",
+    "schema = get_flight_schema()\n",
+    "expected_df = (spark.read.format(\"csv\")\n",
+    "      .option(\"header\", \"false\")\n",
+    "      .schema(schema)\n",
+    "      .load(\"/databricks-datasets/airlines/\")\n",
+    "      .limit(1000)\n",
+    "    )\n",
+    "expected_df.createOrReplaceTempView(\"expected_flights_raw\")\n",
     "expected_counts = spark.sql(\"\"\"\n",
-    "        WITH source_agg (\n",
-    "            SELECT count(distinct deptime) deptime_count, count(1) rows\n",
-    "                FROM main.flights_test.flights_raw\n",
-    "        )\n",
-    "        SELECT count(distinct deptime_count) dim_count, count(1) rows\n",
-    "        FROM source_agg\n",
+    "        SELECT count(distinct deptime) deptime_count, count(1) rows\n",
+    "        FROM expected_flights_raw\n",
     "        \"\"\")\n",
     "\n",
     "assertDataFrameEqual(result_counts, expected_counts)"
@@ -96,7 +102,6 @@
    "outputs": [],
    "source": [
     "from pyspark.sql import Row\n",
-    "from mock import ANY\n",
     "\n",
     "result = spark.sql(\"\"\"\n",
     "        SELECT count(distinct deptime) deptime_count, count(1) rows\n",
@@ -108,7 +113,7 @@
     "assert result.rows == 1000\n",
     "\n",
     "# Option 2\n",
-    "expected_counts = Row(dt_count=ANY, rows=1000)\n",
+    "expected_counts = Row(dt_count=398, rows=1000)\n",
     "assert result == expected_counts"
    ]
   },
