--- a/tests/integration/validation_notebook.ipynb
+++ b/tests/integration/validation_notebook.ipynb
@@ -43,18 +43,50 @@
    "outputs": [],
    "source": [
     "from pyspark.testing.utils import assertDataFrameEqual\n",
-    "from flights.transforms.flight_transforms import get_flight_schema\n",
-    "\n",
+    "from pyspark.sql.types import StructType, StructField, IntegerType, StringType\n",
     "\n",
     "result_counts = spark.sql(\"\"\"\n",
     "        SELECT count(distinct deptime) deptime_count, count(1) rows\n",
     "        FROM main.flights_test.flights_raw\n",
     "        \"\"\")\n",
     "\n",
-    "schema = get_flight_schema()\n",
+    "csv_schema = schema = StructType([\n",
+    "      StructField(\"Year\", IntegerType(), True),\n",
+    "      StructField(\"Month\", IntegerType(), True),\n",
+    "      StructField(\"DayofMonth\", IntegerType(), True),\n",
+    "      StructField(\"DayOfWeek\", IntegerType(), True),\n",
+    "      StructField(\"DepTime\", StringType(), True),\n",
+    "      StructField(\"CRSDepTime\", IntegerType(), True),\n",
+    "      StructField(\"ArrTime\", StringType(), True),\n",
+    "      StructField(\"CRSArrTime\", IntegerType(), True),\n",
+    "      StructField(\"UniqueCarrier\", StringType(), True),\n",
+    "      StructField(\"FlightNum\", IntegerType(), True),\n",
+    "      StructField(\"TailNum\", StringType(), True),\n",
+    "      StructField(\"ActualElapsedTime\", StringType(), True),\n",
+    "      StructField(\"CRSElapsedTime\", IntegerType(), True),\n",
+    "      StructField(\"AirTime\", StringType(), True),\n",
+    "      StructField(\"ArrDelay\", StringType(), True),\n",
+    "      StructField(\"DepDelay\", StringType(), True),\n",
+    "      StructField(\"Origin\", StringType(), True),\n",
+    "      StructField(\"Dest\", StringType(), True),\n",
+    "      StructField(\"Distance\", StringType(), True),\n",
+    "      StructField(\"TaxiIn\", StringType(), True),\n",
+    "      StructField(\"TaxiOut\", StringType(), True),\n",
+    "      StructField(\"Cancelled\", IntegerType(), True),\n",
+    "      StructField(\"CancellationCode\", StringType(), True),\n",
+    "      StructField(\"Diverted\", IntegerType(), True),\n",
+    "      StructField(\"CarrierDelay\", StringType(), True),\n",
+    "      StructField(\"WeatherDelay\", StringType(), True),\n",
+    "      StructField(\"NASDelay\", StringType(), True),\n",
+    "      StructField(\"SecurityDelay\", StringType(), True),\n",
+    "      StructField(\"LateAircraftDelay\", StringType(), True),\n",
+    "      StructField(\"IsArrDelayed\", StringType(), True),\n",
+    "      StructField(\"IsDepDelayed\", StringType(), True)\n",
+    "    ])\n",
+    "\n",
     "expected_df = (spark.read.format(\"csv\")\n",
     "      .option(\"header\", \"false\")\n",
-    "      .schema(schema)\n",
+    "      .schema(csv_schema)\n",
     "      .load(\"/databricks-datasets/airlines/\")\n",
     "      .limit(1000)\n",
     "    )\n",
