Update bundle and validation tests

--- a/tests/integration/validation_notebook.ipynb
+++ b/tests/integration/validation_notebook.ipynb
@@ -141,12 +141,8 @@
     "        \"\"\").first()\n",
     "\n",
     "# Option 1\n",
-    "# assert result.dt_count == 60\n",
-    "assert result.rows == 1000\n",
-    "\n",
-    "# Option 2\n",
-    "expected_counts = Row(dt_count=398, rows=1000)\n",
-    "assert result == expected_counts"
+    "# assert result.dt_count == 398\n",
+    "assert result.rows == 1000\n"
    ]
   },
   {
