Add example feature 202407.1 (#2)
* Add environment setting to github action

* Fixes for validation_notebook asserts

* Fix validation notebook

* Add schema to expected data csv read

* Updates related to cicd

* Fix validation parameters and update GH action

* Update tests auth

* Update bundle and validation tests

* Add simple print statement

* Add comment

---------

Co-authored-by: dustinvannoy-db <dustinvannoy-db>

--- a/tests/integration/validation_notebook.ipynb
+++ b/tests/integration/validation_notebook.ipynb
@@ -43,19 +43,57 @@
    "outputs": [],
    "source": [
     "from pyspark.testing.utils import assertDataFrameEqual\n",
+    "from pyspark.sql.types import StructType, StructField, IntegerType, StringType\n",
     "\n",
     "result_counts = spark.sql(\"\"\"\n",
-    "        SELECT count(distinct cast(timestamp as date)) dt_count, count(1) rows\n",
+    "        SELECT count(distinct deptime) deptime_count, count(1) rows\n",
     "        FROM main.flights_test.flights_raw\n",
     "        \"\"\")\n",
     "\n",
+    "csv_schema = schema = StructType([\n",
+    "      StructField(\"Year\", IntegerType(), True),\n",
+    "      StructField(\"Month\", IntegerType(), True),\n",
+    "      StructField(\"DayofMonth\", IntegerType(), True),\n",
+    "      StructField(\"DayOfWeek\", IntegerType(), True),\n",
+    "      StructField(\"DepTime\", StringType(), True),\n",
+    "      StructField(\"CRSDepTime\", IntegerType(), True),\n",
+    "      StructField(\"ArrTime\", StringType(), True),\n",
+    "      StructField(\"CRSArrTime\", IntegerType(), True),\n",
+    "      StructField(\"UniqueCarrier\", StringType(), True),\n",
+    "      StructField(\"FlightNum\", IntegerType(), True),\n",
+    "      StructField(\"TailNum\", StringType(), True),\n",
+    "      StructField(\"ActualElapsedTime\", StringType(), True),\n",
+    "      StructField(\"CRSElapsedTime\", IntegerType(), True),\n",
+    "      StructField(\"AirTime\", StringType(), True),\n",
+    "      StructField(\"ArrDelay\", StringType(), True),\n",
+    "      StructField(\"DepDelay\", StringType(), True),\n",
+    "      StructField(\"Origin\", StringType(), True),\n",
+    "      StructField(\"Dest\", StringType(), True),\n",
+    "      StructField(\"Distance\", StringType(), True),\n",
+    "      StructField(\"TaxiIn\", StringType(), True),\n",
+    "      StructField(\"TaxiOut\", StringType(), True),\n",
+    "      StructField(\"Cancelled\", IntegerType(), True),\n",
+    "      StructField(\"CancellationCode\", StringType(), True),\n",
+    "      StructField(\"Diverted\", IntegerType(), True),\n",
+    "      StructField(\"CarrierDelay\", StringType(), True),\n",
+    "      StructField(\"WeatherDelay\", StringType(), True),\n",
+    "      StructField(\"NASDelay\", StringType(), True),\n",
+    "      StructField(\"SecurityDelay\", StringType(), True),\n",
+    "      StructField(\"LateAircraftDelay\", StringType(), True),\n",
+    "      StructField(\"IsArrDelayed\", StringType(), True),\n",
+    "      StructField(\"IsDepDelayed\", StringType(), True)\n",
+    "    ])\n",
+    "\n",
+    "expected_df = (spark.read.format(\"csv\")\n",
+    "      .option(\"header\", \"false\")\n",
+    "      .schema(csv_schema)\n",
+    "      .load(\"/databricks-datasets/airlines/\")\n",
+    "      .limit(1000)\n",
+    "    )\n",
+    "expected_df.createOrReplaceTempView(\"expected_flights_raw\")\n",
     "expected_counts = spark.sql(\"\"\"\n",
-    "        WITH source_agg (\n",
-    "            SELECT count(distinct cast(timestamp as date)) dt_count, count(1) rows\n",
-    "                FROM main.flights_test.flights_raw\n",
-    "        )\n",
-    "        SELECT count(distinct dt) dt_count, count(1) rows\n",
-    "        FROM source_agg\n",
+    "        SELECT count(distinct deptime) deptime_count, count(1) rows\n",
+    "        FROM expected_flights_raw\n",
     "        \"\"\")\n",
     "\n",
     "assertDataFrameEqual(result_counts, expected_counts)"
@@ -98,17 +136,13 @@
     "from pyspark.sql import Row\n",
     "\n",
     "result = spark.sql(\"\"\"\n",
-    "        SELECT count(distinct cast(timestamp as date)) dt_count, count(1) rows\n",
+    "        SELECT count(distinct deptime) deptime_count, count(1) rows\n",
     "        FROM main.flights_test.flights_raw\n",
     "        \"\"\").first()\n",
     "\n",
     "# Option 1\n",
-    "assert result.dt_count == 60\n",
-    "assert result.rows == 3290\n",
-    "\n",
-    "# Option 2\n",
-    "expected_counts = Row(dt_count=60, rows=3290)\n",
-    "assert result == expected_counts"
+    "# assert result.dt_count == 398\n",
+    "assert result.rows == 1000\n"
    ]
   },
   {
