Update validation notebook assert

--- a/tests/integration/validation_notebook.ipynb
+++ b/tests/integration/validation_notebook.ipynb
@@ -46,7 +46,7 @@
     "from pyspark.sql.types import StructType, StructField, IntegerType, StringType\n",
     "\n",
     "result_counts = spark.sql(\"\"\"\n",
-    "        SELECT count(distinct deptime) deptime_count, count(1) rows\n",
+    "        SELECT sum(case when deptime is null then 1 else 0 end) null_deptime_count, count(1) rows\n",
     "        FROM main.flights_test.flights_raw\n",
     "        \"\"\")\n",
     "\n",
@@ -92,7 +92,7 @@
     "    )\n",
     "expected_df.createOrReplaceTempView(\"expected_flights_raw\")\n",
     "expected_counts = spark.sql(\"\"\"\n",
-    "        SELECT count(distinct deptime) deptime_count, count(1) rows\n",
+    "        SELECT sum(case when deptime is null then 1 else 0 end) null_deptime_count, count(1) rows\n",
     "        FROM expected_flights_raw\n",
     "        \"\"\")\n",
     "\n",
